# llms-project

./: README  caso.txt  example.env  main.py  pyproject.toml  requeriments.txt
agent/: agent.py
agent/utils/: prompt.py  state.py  tools.py
index/files/: doc_chunks.jsonl  doc_clean_unstructured.jsonl
index/qdrant/: buscar_qdrant_cloud.py  criar_base_qdrant.py
