[project]
name = "llms-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.0.2",
    "langchain-core>=1.0.0",
    "langchain-google-genai>=3.0.0",
    "langgraph>=1.0.1",
    "langgraph-cli[inmem]>=0.4.4",
]
